--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "axios": "^1.7.5",
     "cheerio": "^1.0.0",
+    "csv-parser": "^3.2.0",
     "fs": "^0.0.1-security",
     "jsdom": "^25.0.0",
+    "puppeteer": "^24.4.0",
     "xml2js": "^0.6.2"
   }
 }
