--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.5",
+    "axios": "1.8.2",
     "cheerio": "^1.0.0",
     "csv-parser": "^3.2.0",
     "fs": "^0.0.1-security",
