--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs": "^0.0.1-security",
     "jsdom": "^25.0.0",
     "puppeteer": "^24.4.0",
+    "uuid": "^11.1.0",
     "xml2js": "^0.6.2"
   }
 }
