--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "1.8.2",
-    "cheerio": "^1.0.0",
-    "csv-parser": "^3.2.0",
-    "fs": "^0.0.1-security",
-    "jsdom": "^25.0.0",
-    "puppeteer": "^24.4.0",
-    "uuid": "^11.1.0",
+    "cheerio": "1.0.0",
+    "csv-parser": "3.2.0",
+    "fs": "0.0.1-security",
+    "jsdom": "25.0.0",
+    "puppeteer": "24.4.0",
+    "uuid": "11.1.0",
     "xml2js": "^0.6.2"
   }
 }
